side panel animations & solved overflow

--- a/Src/Innovative.Blazor.Components/Components/Form/InnovativeForm.razor.css
+++ b/Src/Innovative.Blazor.Components/Components/Form/InnovativeForm.razor.css
@@ -1,25 +1,6 @@
 ﻿.rz-dialog-side-content-layout {
-    --grid-max-col-count: 3;
-    --grid-min-col-size: max(10px, 250px);
-    --grid-gap: 1rem;
-
-    /* Calculations do not change */
-    --grid-col-size-calc: calc(
-            (100% - var(--grid-gap) * (var(--grid-max-col-count) - 1)) /
-            var(--grid-max-col-count)
-    );
-    --grid-col-min-size-calc: min(
-        100%,
-        max(var(--grid-min-col-size), var(--grid-col-size-calc))
-    );
-
     display: grid;
-    gap: var(--grid-gap);
-    grid-template-columns: repeat(
-    auto-fit,
-    minmax(var(--grid-col-min-size-calc), 1fr)
-  );
-    container-type: inline-size;
+    gap: 1rem;
 }
 
 .rz-dialog-side-content-layout ::deep .rz-label {
